platform/gitops/components/secrets/vault/ingress/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ui
  namespace: vault-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  hostnames:
    - vault.invalid
  parentRefs:
    - name: public-gateway
      namespace: istio-system
      sectionName: https-vault
  rules:
    - backendRefs:
        - name: vault-ui
          port: 8200
